--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,17 @@
 <!doctype html>
 <html lang="en">
 <head>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1F35JW1ZG3"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-1F35JW1ZG3');
+    </script>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="google-site-verification" content="DuTmX4L2l2t61zV3fS7WtjJfAkYoi-TrbwxQlh0kk9I" />
