--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,8 @@
 
     gtag('config', 'G-1F35JW1ZG3');
     </script>
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5520751781337005"
+    crossorigin="anonymous"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="google-site-verification" content="DuTmX4L2l2t61zV3fS7WtjJfAkYoi-TrbwxQlh0kk9I" />
