--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,8 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<h1>Login</h1>
+<h1>Login to Your Account</h1>
+<p>Welcome to our URL shortener service. Manage and track your links with ease using our platform, which offers features similar to bitly, tinyurl, and more.</p>
 <form method="post">
     <input type="text" name="username" placeholder="Username" required class="form-control">
     <input type="password" name="password" placeholder="Password" required class="form-control">
