--- a/templates/login.html
+++ b/templates/login.html
@@ -6,8 +6,12 @@
 <h1>Login to Your Account</h1>
 <p>Welcome to our URL shortener service. Manage and track your links with ease using our platform, which offers features similar to bitly, tinyurl, and more.</p>
 <form method="post">
-    <input type="text" name="username" placeholder="Username" required class="form-control">
-    <input type="password" name="password" placeholder="Password" required class="form-control">
+    <div class="form-group">
+        <input type="text" name="username" placeholder="Username" required class="form-control">
+    </div>
+    <div class="form-group">
+        <input type="password" name="password" placeholder="Password" required class="form-control">
+    </div>
     <button type="submit" class="btn btn-primary">Login</button>
 </form>
 <a href="{{ url_for('register') }}">Don't have an account? Register</a>
