Updated htmls css and app for user xperience to be approved by google adsens

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,8 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<h1>Welcome to Our URL Shortener Service</h1>
-<p>Manage and track your links with ease using our platform, which offers features similar to bitly, tinyurl, and more.</p>
-
+<div class="jumbotron">
+    <h1 class="display-4">Welcome to Our URL Shortener Service</h1>
+    <p class="lead">Manage and track your links with ease using our platform, which offers features similar to bitly, tinyurl, and more.</p>
+</div>
 {% endblock %}
