--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,33 @@
     <title>{% block title %}My URL Shortener{% endblock %}</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <!-- Include Flatpickr CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+
+<!-- Include Flatpickr JS -->
+<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+<style>
+    .animated-icon {
+        margin-left: 10px;
+        display: inline-block;
+        animation: bounce 1s infinite;
+    }
+    
+    @keyframes bounce {
+        0%, 20%, 50%, 80%, 100% {
+            transform: translateY(0);
+        }
+        40% {
+            transform: translateY(-10px);
+        }
+        60% {
+            transform: translateY(-5px);
+        }
+    }
+    </style>
+    
 </head>
 <body>
     <header>
@@ -14,8 +41,8 @@
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('index') }}">Shorten URL</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('stats') }}">Stats</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('sitemap') }}">Sitemap</a></li>
+                    <!-- <li class="nav-item"><a class="nav-link" href="{{ url_for('stats') }}">Stats</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('sitemap') }}">Sitemap</a></li> -->
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('privacy_policy') }}">Privacy Policy</a></li>
                 </ul>
             </div>
