Added adsense snippet

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,8 @@
 <!-- Include Flatpickr JS -->
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5520751781337005"
+     crossorigin="anonymous"></script>
 <style>
     .animated-icon {
         margin-left: 10px;
