--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,18 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5520751781337005"
      crossorigin="anonymous"></script>
+     
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-1F35JW1ZG3"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+    
+        gtag('config', 'G-1F35JW1ZG3');
+        </script>
+    
+    
 <style>
     .animated-icon {
         margin-left: 10px;
