--- a/templates/base.html
+++ b/templates/base.html
@@ -3,59 +3,125 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}My URL Shortener{% endblock %}</title>
+    <meta name="description" content="URL Shortener service to manage and track your links easily.">
+    <meta name="keywords" content="URL Shortener, Link Management, URL Tracking">
+    <meta name="author" content="Manoj">
+
+    <!-- Open Graph meta tags for social media -->
+    <meta property="og:title" content="{% block og_title %}My URL Shortener{% endblock %}">
+    <meta property="og:description" content="Manage and track your links with ease using our platform, which offers features similar to bitly, tinyurl, and more.">
+    <meta property="og:image" content="{{ url_for('static', filename='tmlabs_logo.png') }}">
+    <meta property="og:url" content="{{ url_for('home', _external=True) }}">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter Card meta tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="{% block twitter_title %}My URL Shortener{% endblock %}">
+    <meta name="twitter:description" content="Manage and track your links with ease using our platform, which offers features similar to bitly, tinyurl, and more.">
+    <meta name="twitter:image" content="{{ url_for('static', filename='tmlabs_logo.png') }}">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-    <!-- Include Flatpickr CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
-
-<!-- Include Flatpickr JS -->
-<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5520751781337005"
-     crossorigin="anonymous"></script>
-     
-        <!-- Google tag (gtag.js) -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-1F35JW1ZG3"></script>
-        <script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5520751781337005" crossorigin="anonymous"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1F35JW1ZG3"></script>
+    <script>
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-    
         gtag('config', 'G-1F35JW1ZG3');
-        </script>
-    
-    
-<style>
-    .animated-icon {
-        margin-left: 10px;
-        display: inline-block;
-        animation: bounce 1s infinite;
-    }
-    
-    @keyframes bounce {
-        0%, 20%, 50%, 80%, 100% {
-            transform: translateY(0);
+    </script>
+    <style>
+        /* Bounce animation for the icon */
+        .animated-icon {
+            margin-left: 10px;
+            display: inline-block;
+            animation: bounce 1s infinite;
         }
-        40% {
-            transform: translateY(-10px);
+
+        @keyframes bounce {
+            0%, 20%, 50%, 80%, 100% {
+                transform: translateY(0);
+            }
+            40% {
+                transform: translateY(-10px);
+            }
+            60% {
+                transform: translateY(-5px);
+            }
         }
-        60% {
-            transform: translateY(-5px);
+
+        /* Button styles */
+        .animated-button {
+            position: relative;
+            overflow: hidden;
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            padding: 10px 20px;
+            font-size: 16px;
+            border: none;
+            cursor: pointer;
+            background-color: #007bff; /* Adjust to your button color */
+            color: #fff;
+            border-radius: 4px;
         }
-    }
+
+        .animated-button::after {
+            content: "";
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 300%;
+            height: 300%;
+            background: rgba(255, 255, 255, 0.3);
+            transition: width 0.5s, height 0.5s, top 0.5s, left 0.5s;
+            border-radius: 50%;
+            z-index: 0;
+            transform: translate(-50%, -50%);
+        }
+
+        .animated-button:hover::after {
+            width: 400%;
+            height: 400%;
+            top: -50%;
+            left: -50%;
+        }
+
+        .animated-button .btn {
+            position: relative;
+            z-index: 1;
+        }
+
+        .navbar-brand img {
+            height: 50px; /* Adjust the height to your preference */
+            width: auto; /* Maintain aspect ratio */
+        }
+
+        .navbar-nav {
+            text-align: right; /* Align text to the right */
+        }
+
+        .navbar-nav .nav-item {
+            margin-left: 15px; /* Add space between nav items */
+        }
     </style>
-    
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="{{ url_for('home') }}">URL Shortener</a>
-            <div class="collapse navbar-collapse">
-                <ul class="navbar-nav mr-auto">
+            <a class="navbar-brand" href="{{ url_for('home') }}">
+                <img src="{{ url_for('static', filename='tmlabs_logo.png') }}" alt="Home URL Shortener Free">
+                URL Shortener Free
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('index') }}">Shorten URL</a></li>
-                    <!-- <li class="nav-item"><a class="nav-link" href="{{ url_for('stats') }}">Stats</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('sitemap') }}">Sitemap</a></li> -->
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('privacy_policy') }}">Privacy Policy</a></li>
                 </ul>
             </div>
