--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
     <meta name="twitter:description" content="Manage and track your links with ease using our platform, which offers features similar to bitly, tinyurl, and more.">
     <meta name="twitter:image" content="{{ url_for('static', filename='tmlabs_logo.png') }}">
 
+    <link rel="canonical" href="{{ url_for('home', _external=True) }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
