--- a/templates/base.html
+++ b/templates/base.html
@@ -134,6 +134,18 @@
     </main>
     <footer class="bg-light text-center py-3">
         <p>&copy; 2024 My URL Shortener</p>
+        <script async type="application/javascript"
+        src="https://news.google.com/swg/js/v1/swg-basic.js"></script>
+<script>
+  (self.SWG_BASIC = self.SWG_BASIC || []).push( basicSubscriptions => {
+    basicSubscriptions.init({
+      type: "NewsArticle",
+      isPartOfType: ["Product"],
+      isPartOfProductId: "CAow1d2vDA:openaccess",
+      clientOptions: { theme: "light", lang: "en-GB" },
+    });
+  });
+</script>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
