--- a/templates/base.html
+++ b/templates/base.html
@@ -133,7 +133,7 @@
         {% endblock %}
     </main>
     <footer class="bg-light text-center py-3">
-        <p>&copy; 2024 My URL Shortener</p>
+        <p>&copy; 2024 tMLABS India URL Shortener</p>
         <script async type="application/javascript"
         src="https://news.google.com/swg/js/v1/swg-basic.js"></script>
 <script>
