--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 
-{% block title %}Shorten URL - My URL Shortener{% endblock %}
+{% block title %}Shorten URL - tMLABS India URL Shortener{% endblock %}
 
 {% block content %}
 <div class="container mt-5">
-    <h1 class="mb-4 text-center">Welcome to FlaskShortener</h1>
+    <h1 class="mb-4 text-center">Welcome to tMLABS India URL Shortener</h1>
 
     <form method="post" class="form" style="max-width: 600px; margin: auto;">
         <div class="form-group mb-3">
