--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,8 @@
     <meta property="og:url" content="{{ url_for('home', _external=True) }}">
     <meta property="og:type" content="website">
 
+    <meta name="google-adsense-account" content="ca-pub-5520751781337005">
+    
     <!-- Twitter Card meta tags -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="{% block twitter_title %}My URL Shortener{% endblock %}">
