--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5520751781337005" crossorigin="anonymous"></script>
+    <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5520751781337005" crossorigin="anonymous"></script> -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-1F35JW1ZG3"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -36,6 +36,8 @@
         gtag('js', new Date());
         gtag('config', 'G-1F35JW1ZG3');
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5520751781337005"
+    crossorigin="anonymous"></script>
     <style>
         /* Bounce animation for the icon */
         .animated-icon {
@@ -124,7 +126,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('index') }}">Shorten URL</a></li>
+                    <!-- Update the URL in the navbar -->
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('url_shortener') }}">Shorten URL</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('privacy_policy') }}">Privacy Policy</a></li>
                 </ul>
             </div>
