--- a/templates/base.html
+++ b/templates/base.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="URL Shortener service to manage and track your links easily.">
-    <meta name="keywords" content="URL Shortener, Link Management, URL Tracking">
+    <meta name="description" content="Explore our range of software tools, including URL Shortener and BMI Calculator, to manage and track your data easily.">
+    <meta name="keywords" content="URL Shortener, BMI Calculator, Link Management, Data Tools">
     <meta name="author" content="Manoj">
 
     <!-- Open Graph meta tags for social media -->
-    <meta property="og:title" content="{% block og_title %}My URL Shortener{% endblock %}">
-    <meta property="og:description" content="Manage and track your links with ease using our platform, which offers features similar to bitly, tinyurl, and more.">
+    <meta property="og:title" content="{% block og_title %}tMLABS India{% endblock %}">
+    <meta property="og:description" content="Explore our range of software tools, including URL Shortener and BMI Calculator, to manage and track your data easily.">
     <meta property="og:image" content="{{ url_for('static', filename='tmlabs_logo.png') }}">
     <meta property="og:url" content="{{ url_for('home', _external=True) }}">
     <meta property="og:type" content="website">
@@ -18,8 +18,8 @@
     
     <!-- Twitter Card meta tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="{% block twitter_title %}My URL Shortener{% endblock %}">
-    <meta name="twitter:description" content="Manage and track your links with ease using our platform, which offers features similar to bitly, tinyurl, and more.">
+    <meta name="twitter:title" content="{% block twitter_title %}tMLABS India{% endblock %}">
+    <meta name="twitter:description" content="Explore our range of software tools, including URL Shortener and BMI Calculator, to manage and track your data easily.">
     <meta name="twitter:image" content="{{ url_for('static', filename='tmlabs_logo.png') }}">
 
     <link rel="canonical" href="{{ url_for('home', _external=True) }}">
@@ -28,7 +28,6 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
-    <!-- <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5520751781337005" crossorigin="anonymous"></script> -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-1F35JW1ZG3"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -119,7 +118,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="{{ url_for('home') }}">
                 <img src="{{ url_for('static', filename='tmlabs_logo.png') }}" alt="Home URL Shortener Free">
-                URL Shortener Free
+                tMLABS India
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -128,6 +127,7 @@
                 <ul class="navbar-nav ml-auto">
                     <!-- Update the URL in the navbar -->
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('url_shortener') }}">Shorten URL</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('bmi_tool') }}">BMI Calculator</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('privacy_policy') }}">Privacy Policy</a></li>
                 </ul>
             </div>
@@ -138,19 +138,19 @@
         {% endblock %}
     </main>
     <footer class="bg-light text-center py-3">
-        <p>&copy; 2024 tMLABS India URL Shortener</p>
+        <p>&copy; 2024 tMLABS India</p>
         <script async type="application/javascript"
         src="https://news.google.com/swg/js/v1/swg-basic.js"></script>
-<script>
-  (self.SWG_BASIC = self.SWG_BASIC || []).push( basicSubscriptions => {
-    basicSubscriptions.init({
-      type: "NewsArticle",
-      isPartOfType: ["Product"],
-      isPartOfProductId: "CAow1d2vDA:openaccess",
-      clientOptions: { theme: "light", lang: "en-GB" },
-    });
-  });
-</script>
+        <script>
+          (self.SWG_BASIC = self.SWG_BASIC || []).push( basicSubscriptions => {
+            basicSubscriptions.init({
+              type: "NewsArticle",
+              isPartOfType: ["Product"],
+              isPartOfProductId: "CAow1d2vDA:openaccess",
+              clientOptions: { theme: "light", lang: "en-GB" },
+            });
+          });
+        </script>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
