Fixed bmi bmi_tool issu

--- a/templates/base.html
+++ b/templates/base.html
@@ -127,7 +127,7 @@
                 <ul class="navbar-nav ml-auto">
                     <!-- Update the URL in the navbar -->
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('url_shortener') }}">Shorten URL</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('bmi_tool') }}">BMI Calculator</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('bmi') }}">BMI Calculator</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('privacy_policy') }}">Privacy Policy</a></li>
                 </ul>
             </div>
