Fixed bmi bmi_tool issu

--- a/templates/home.html
+++ b/templates/home.html
@@ -29,7 +29,7 @@
                 <div class="card-body">
                     <h5 class="card-title">BMI Calculator</h5>
                     <p class="card-text">Calculate your Body Mass Index (BMI) quickly using various units of measurement.</p>
-                    <a href="{{ url_for('bmi_tool') }}" class="btn btn-primary">
+                    <a href="{{ url_for('bmi') }}" class="btn btn-primary">
                         Calculate BMI <i class="fas fa-weight"></i>
                     </a>
                 </div>
