--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="{% block og_title %}tMLABS India{% endblock %}">
     <meta property="og:description" content="Explore our range of software tools, including URL Shortener, Password Generator, Unit Converter, BMI Calculator, Age Calculator, to manage and track your data easily.">
     <meta property="og:image" content="{{ url_for('static', filename='tmlabs_logo.png') }}">
-    <meta property="og:url" content="{{ url_for('home', _external=True) }}">
+    <meta property="og:url" content="{{ url_for('home.home', _external=True) }}">
     <meta property="og:type" content="website">
 
     <meta name="google-adsense-account" content="ca-pub-5520751781337005">
@@ -22,10 +22,10 @@
     <meta name="twitter:description" content="Explore our range of software tools, including URL Shortener, Password Generator, Unit Converter, BMI Calculator, Age Calculator, to manage and track your data easily.">
     <meta name="twitter:image" content="{{ url_for('static', filename='tmlabs_logo.png') }}">
 
-    <link rel="canonical" href="{{ url_for('home', _external=True) }}">
+    <link rel="canonical" href="{{ url_for('home.home', _external=True) }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-1F35JW1ZG3"></script>
@@ -116,7 +116,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="{{ url_for('home') }}">
+            <a class="navbar-brand" href="{{ url_for('home.home') }}">
                 <img src="{{ url_for('static', filename='tmlabs_logo.png') }}" alt="Home">
                 tMLABS India
             </a>
@@ -125,12 +125,12 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-                    <!-- Update the URL in the navbar -->
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('url_shortener') }}">Shorten URL</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('bmi') }}">BMI Calculator</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('password_generator') }}">Password Generator</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('unit_converter') }}">Unit Converter</a></li>
-                    <li class="nav-item"><a class="nav-link" href="{{ url_for('age_calculator') }}">Age Calculator</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('url_shortener.url_shortener') }}">Shorten URL</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('bmi.bmi') }}">BMI Calculator</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('password_generator.password_generator') }}">Password Generator</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('unit_converter.unit_converter') }}">Unit Converter</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('age_calculator.age_calculator') }}">Age Calculator</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('privacy_policy.privacy_policy') }}">Privacy Policy</a></li>
                 </ul>
             </div>
         </nav>
@@ -140,7 +140,7 @@
         {% endblock %}
     </main>
     <footer class="bg-light text-center py-3">
-        <p>&copy; 2024 tMLABS India | <a href="{{ url_for('privacy_policy') }}">Privacy Policy</a></p>
+        <p>&copy; 2024 tMLABS India</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
