--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -16,7 +16,7 @@
                 <div class="card-body">
                     <h5 class="card-title">URL Shortener</h5>
                     <p class="card-text">Shorten and manage your URLs with our efficient and easy-to-use URL Shortener tool.</p>
-                    <a href="{{ url_for('url_shortener') }}" class="btn btn-primary">
+                    <a href="{{ url_for('url_shortener.url_shortener') }}" class="btn btn-primary">
                         Use URL Shortener <i class="fas fa-link"></i>
                     </a>
                 </div>
@@ -29,7 +29,7 @@
                 <div class="card-body">
                     <h5 class="card-title">BMI Calculator</h5>
                     <p class="card-text">Calculate your Body Mass Index (BMI) quickly using various units of measurement.</p>
-                    <a href="{{ url_for('bmi') }}" class="btn btn-primary">
+                    <a href="{{ url_for('bmi.bmi') }}" class="btn btn-primary">
                         Calculate BMI <i class="fas fa-weight"></i>
                     </a>
                 </div>
@@ -42,7 +42,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Password Generator</h5>
                     <p class="card-text">Create secure passwords with ease using our customizable Password Generator.</p>
-                    <a href="{{ url_for('password_generator') }}" class="btn btn-primary">
+                    <a href="{{ url_for('password_generator.password_generator') }}" class="btn btn-primary">
                         Generate Password <i class="fas fa-key"></i>
                     </a>
                 </div>
@@ -55,7 +55,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Unit Converter</h5>
                     <p class="card-text">Convert units of measurement easily with our Unit Converter tool.</p>
-                    <a href="{{ url_for('unit_converter') }}" class="btn btn-primary">
+                    <a href="{{ url_for('unit_converter.unit_converter') }}" class="btn btn-primary">
                         Use Unit Converter <i class="fas fa-exchange-alt"></i>
                     </a>
                 </div>
@@ -68,7 +68,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Age Calculator</h5>
                     <p class="card-text">Calculate your age based on your birthdate.</p>
-                    <a href="{{ url_for('age_calculator') }}" class="btn btn-primary">
+                    <a href="{{ url_for('age_calculator.age_calculator') }}" class="btn btn-primary">
                         Use Age Calculator <i class="fas fa-calendar-alt"></i>
                     </a>
                 </div>
